{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 284,
  "lineage": "676a9019-6c23-a608-4b1b-3a101c110e0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_ingress_localhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/32"
            ],
            "description": "Allow traffic from localhost",
            "from_port": 443,
            "id": "sgrule-4276878387",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3afacee99ed381b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks.aws_security_group.cluster",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:security-group/sg-0a3afacee99ed381b",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3afacee99ed381b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/32"
                ],
                "description": "Allow traffic from localhost",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a6691082ad89c9c5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-cluster20210516042800226500000007",
            "name_prefix": "my-cluster",
            "owner_id": "021510583954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-cluster-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "my-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d6eb6fca9f64875"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:security-group/sg-0a6691082ad89c9c5",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6691082ad89c9c5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3afacee99ed381b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3afacee99ed381b"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "my-cluster20210516042800226800000008",
            "name_prefix": "my-cluster",
            "owner_id": "021510583954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d6eb6fca9f64875"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-473762250",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a3afacee99ed381b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks.aws_security_group.cluster",
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-754949750",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3afacee99ed381b",
            "self": false,
            "source_security_group_id": "sg-0a6691082ad89c9c5",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks.aws_security_group.cluster",
            "module.my_eks.aws_security_group.workers",
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-353746781",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a6691082ad89c9c5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks.aws_security_group.workers",
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-619204653",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6691082ad89c9c5",
            "self": false,
            "source_security_group_id": "sg-0a3afacee99ed381b",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks.aws_security_group.cluster",
            "module.my_eks.aws_security_group.workers",
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-152647550",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6691082ad89c9c5",
            "self": false,
            "source_security_group_id": "sg-0a3afacee99ed381b",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks.aws_security_group.cluster",
            "module.my_eks.aws_security_group.workers",
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2263940733",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a6691082ad89c9c5",
            "self": false,
            "source_security_group_id": "sg-0a6691082ad89c9c5",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks.aws_security_group.workers",
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a696d385184c44b8",
            "domain": "vpc",
            "id": "eipalloc-02d7d4a0c4e8782f1",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c156211d96587692",
            "private_dns": "ip-10-0-100-119.us-east-2.compute.internal",
            "private_ip": "10.0.100.119",
            "public_dns": "ec2-3-20-201-180.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.201.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks_vpc-us-east-2a",
              "kubernetes.io/cluster/my-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_vpc-us-east-2a",
              "kubernetes.io/cluster/my-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:internet-gateway/igw-05e0b9ec2efba6734",
            "id": "igw-05e0b9ec2efba6734",
            "owner_id": "021510583954",
            "tags": {
              "Name": "eks_vpc",
              "kubernetes.io/cluster/my-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_vpc",
              "kubernetes.io/cluster/my-cluster": "shared"
            },
            "vpc_id": "vpc-09d6eb6fca9f64875"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d7d4a0c4e8782f1",
            "id": "nat-07f636c549a7b63f6",
            "network_interface_id": "eni-0c156211d96587692",
            "private_ip": "10.0.100.119",
            "public_ip": "3.20.201.180",
            "subnet_id": "subnet-0b11e654fbde8c02e",
            "tags": {
              "Name": "eks_vpc-us-east-2a",
              "kubernetes.io/cluster/my-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_vpc-us-east-2a",
              "kubernetes.io/cluster/my-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0634b44442da04cc91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07f636c549a7b63f6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0634b44442da04cc9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_nat_gateway.this",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05e0b9ec2efba6734",
            "id": "r-rtb-0992d72c6be7b6e801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0992d72c6be7b6e80",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:route-table/rtb-0634b44442da04cc9",
            "id": "rtb-0634b44442da04cc9",
            "owner_id": "021510583954",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f636c549a7b63f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks_vpc-private",
              "kubernetes.io/cluster/my-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_vpc-private",
              "kubernetes.io/cluster/my-cluster": "shared"
            },
            "vpc_id": "vpc-09d6eb6fca9f64875"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:route-table/rtb-0992d72c6be7b6e80",
            "id": "rtb-0992d72c6be7b6e80",
            "owner_id": "021510583954",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e0b9ec2efba6734",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks_vpc-public",
              "kubernetes.io/cluster/my-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_vpc-public",
              "kubernetes.io/cluster/my-cluster": "shared"
            },
            "vpc_id": "vpc-09d6eb6fca9f64875"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5c3d3b07c474a51",
            "route_table_id": "rtb-0634b44442da04cc9",
            "subnet_id": "subnet-0366f09b4f3974bf2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f1a89484fd06794",
            "route_table_id": "rtb-0634b44442da04cc9",
            "subnet_id": "subnet-06951e6715274f9b7"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c93d6b230fe0c17d",
            "route_table_id": "rtb-0992d72c6be7b6e80",
            "subnet_id": "subnet-0b11e654fbde8c02e"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0804612763b64d35f",
            "route_table_id": "rtb-0992d72c6be7b6e80",
            "subnet_id": "subnet-0365e4dd160310d0a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-0366f09b4f3974bf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0366f09b4f3974bf2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021510583954",
            "tags": {
              "Name": "eks_vpc-private-us-east-2a",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks_vpc-private-us-east-2a",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09d6eb6fca9f64875"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-06951e6715274f9b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06951e6715274f9b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021510583954",
            "tags": {
              "Name": "eks_vpc-private-us-east-2b",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks_vpc-private-us-east-2b",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09d6eb6fca9f64875"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-0b11e654fbde8c02e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-0b11e654fbde8c02e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021510583954",
            "tags": {
              "Name": "eks_vpc-public-us-east-2a",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_vpc-public-us-east-2a",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09d6eb6fca9f64875"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-0365e4dd160310d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0365e4dd160310d0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021510583954",
            "tags": {
              "Name": "eks_vpc-public-us-east-2b",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_vpc-public-us-east-2b",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09d6eb6fca9f64875"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:vpc/vpc-09d6eb6fca9f64875",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d905d780d55f3c77",
            "default_route_table_id": "rtb-01224b909960d9377",
            "default_security_group_id": "sg-0f28f1297457816d4",
            "dhcp_options_id": "dopt-07de75f960f96528a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d6eb6fca9f64875",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01224b909960d9377",
            "owner_id": "021510583954",
            "tags": {
              "Name": "eks_vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/cluster/my_cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/cluster/my_cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}